--- a/AccountEnterprise.WebMVC/appsettings.json
+++ b/AccountEnterprise.WebMVC/appsettings.json
@@ -2,7 +2,7 @@
     "ConnectionStrings": {
         "DbConnection": "Server=db8599.public.databaseasp.net; Database=db8599; User Id=db8599; Password=7Np%#z6E2-Qa; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True; ",
         "DefaultConnection": "server=D1AMOND; database=Finacical; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True;",
-        "LocalConnection": "server=MAYONEZZ_; database=Finacical; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True;"
+        "LocalConnection": "server=MAYONEZZ_; database=FinacicalDB; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True;"
 
     },
     "Logging": {
